<resources>
    <string name="app_name">appGrupo2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tvNombre">Dan</string>
    <string name="tvInfo">Miraflores - Lima - Peru\nConectados Ahora</string>
    <string name="tvSobredan">Sobre DAN</string>
    <string name="tvDetalles">Dan es un golden retriever con grandes\nhabilidades de conexion tanto en \npersonas como otros canes</string>
    <string name="tvDetalles2">Dan es un golden retriever con grandes capacidades de conexion tanto en personas como en otros canes</string>
    <string name="tvDueño">Dueño</string>
    <string name="tvNombrehumano">Jose Alberto Solarzano Nuñez</string>
    <string name="tvFacebook">Facebook</string>
    <string name="tvDirecface">www.facebook.com/jmegas</string>
    <string name="ptTitu">CONFIRMA TU RESERVA</string>
    <string name="idcalendario">Fecha de Reserva</string>
    <string name="ptFecha" />
    <string name="btFecha">Fecha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_formulario">Formulario</string>
    <string name="btEnviar">Enviar</string>
    <string name="btReserva">Reservas</string>
    <string name="btReservar">Reservar ahora</string>
    <string name="tvlista">LISTA</string>
</resources>